--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>This game has the best story from a mmo that I have played. The beginning main story quest <i>(MSQ)</i> can
             be slow,
             but if you take the time to enjoy the story it is worth it.</p>
-        <a href="https://eu.finalfantasyxiv.com/">Go to official the final Fantasy XIV webbsite</a><br>
+        <a href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
         <table>
             <thead>
                 <tr>
@@ -93,7 +93,7 @@
             and live is the newest expansion. Unless you have friend that you want to play with in the live version,or
             are a returning player I
             would go to classic,where there is not 20 years of story</p>
-        <a href="https://worldofwarcraft.blizzard.com/en-us/">Go to official the world of warcraft webbsite</a><br>
+        <a href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of warcraft webbsite</a><br>
         <br>
         <table>
             <thead>
@@ -142,7 +142,7 @@
         <p>This game is casual friendly and has great value for the money.Have played this on and off for years, sense
             this game
             has no subs I find it easier to go back to when I haven't play in a while.</p>
-        <a href="https://www.guildwars2.com/en/">Go to official the Guld Wars 2 webbsite</a><br>
+        <a href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2 webbsite</a><br>
         <br>
         <table>
             <thead>
