--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Which MMO should you choose?</title>
 </head>
-<style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
-
 <body>
     <header>
         <h1>You want to play an mmo and don't know which to choose?</h1>
@@ -72,12 +64,12 @@
                 <tr>
                     <th scope="row">Free trial</th>
                     <td>Yes</td>
-                    <td>you can play the free version upp til level 70</td>
+                    <td class="comment">You can play the free version upp til level 70</td>
                 </tr>
                 <tr>
                     <th scope="row">Extra</th>
                     <td>Yes </td>
-                    <td>need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
                 </tr>
             </tbody>
         </table><br>
@@ -127,7 +119,7 @@
                 <tr>
                     <th scope="row">Extra</th>
                     <td>Yes</td>
-                    <td>need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
                 </tr>
             </tbody>
         </table>
@@ -176,7 +168,7 @@
                 <tr>
                     <th scope="row">Extra</th>
                     <td>Yes</td>
-                    <td>need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
                 </tr>
             </tbody>
         </table>
