header utom list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header>
         <h1>You want to play an mmo and don't know which to choose?</h1>
         <h2>This site can help you decide!</h2>
-        <p><a href="#finalfantasyxivid">go to Final Fantasy XIV</a></p>
-        <p><a href="#WorldofWarcraft">go to Wolrd of Warcraft</a></p>
-        <p><a href="#guildWars2">go to Guild wars 2</a></p>
+        <div class="link-sammasidagrupp">
+            <p><a class="linksammasida" href="#finalfantasyxivid">Go to Final Fantasy XIV</a></p>
+
+            <p><a class="linksammasida" href="#WorldofWarcraft">Go to Wolrd of Warcraft</a></p>
+
+            <p><a class="linksammasida" href="#guildWars2">Go to Guild wars 2</a></p>
+        </div>
         <figure>
             <img src="https://cache-eu.finalfantasy.com/uploads/content/file/2023/07/28/6655/230729_ff14_0.jpg"
                 alt="finalfantasyxiv_logodawntrail" width="auto" height="150">
@@ -23,7 +27,7 @@
                 alt="guildwars2_logo" width="auto" height="150">
         </figure>
         <p>
-            Think about what what is important to <b>you</b> when choosing an mmo.
+            Think about what what is important to <span class="You">you</span> when choosing an mmo.
         </p>
         <ul>
             <li>Price</li>
@@ -33,9 +37,9 @@
     </header>
     <section>
         <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
-        <p>This game has the best story from a mmo that I have played. The beginning main story quest <i>(MSQ)</i> can
+        <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
             be slow,
-            but if you take the time to enjoy the story it is worth it.</p>
+            but if you take the time to enjoy the story is worth it.</p>
         <a href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
         <table>
             <thead>
