--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             Think about what what is important to <span class="You">you</span> when choosing an mmo.
         </p>
         <ul>
-            <li>Price</li>
-            <li>Genre</li>
-            <li>Combat</li>
+            <li id="pris" >Price</li>
+            <li id="genre" >Genre</li>
+            <li id="combat" >Combat</li>
         </ul>
     </header>
     <section>
