commitet box for link to official ff14 webbsite

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         </ul>
     </header>
     <section>
-        <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
-        <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
-            be slow,
-            but if you take the time to enjoy the story is worth it.</p>
-        <a href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
+
+            <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
+            <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
+                be slow,
+                but if you take the time to enjoy the story is worth it.</p>
+            <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
+
         <table>
             <thead>
                 <tr>
@@ -77,11 +79,13 @@
                 </tr>
             </tbody>
         </table><br>
-        <h4>Trailer for Final Fantasy XIV A REALM REBORN</h4>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/h542YbZuwkQ?si=uBinGszyEWbY6Jde"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="ff14-trailer">
+            <h4>Trailer for Final Fantasy XIV A REALM REBORN</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/h542YbZuwkQ?si=uBinGszyEWbY6Jde"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
     <section>
         <h3 id="WorldofWarcraft">World of Warcraft</h3>
