--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     </header>
     <section>
 
-            <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
-            <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
-                be slow,
-                but if you take the time to enjoy the story is worth it.</p>
-            <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
+        <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
+        <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
+            be slow,
+            but if you take the time to enjoy the story is worth it.</p>
+        <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
 
         <table>
             <thead>
@@ -80,7 +80,7 @@
             </tbody>
         </table><br>
 
-            <h4>Trailer for Final Fantasy XIV A REALM REBORN</h4>
+        <h4>Trailer for Final Fantasy XIV A REALM REBORN</h4>
         <div class="ff14-trailer">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/h542YbZuwkQ?si=uBinGszyEWbY6Jde"
                 title="YouTube video player" frameborder="0"
@@ -94,7 +94,7 @@
             and live is the newest expansion. Unless you have friend that you want to play with in the live version,or
             are a returning player I
             would go to classic,where there is not 20 years of story</p>
-        <a href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of warcraft webbsite</a><br>
+        <a id="offwow" href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of warcraft webbsite</a><br>
         <br>
         <table>
             <thead>
