center wow trailer

--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
             </tbody>
         </table>
         <h4>Trailer for World of Warcraft (original)</h4>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/vlVSJ0AvZe0?si=vvRj1xmXubki-7bn"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="wow-trailer">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vlVSJ0AvZe0?si=vvRj1xmXubki-7bn"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
     <section>
         <h3 id="guildWars2">Guild Wars 2</h3>
