--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p>This game is casual friendly and has great value for the money.Have played this on and off for years, sense
             this game
             has no subs I find it easier to go back to when I haven't play in a while.</p>
-        <a href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2 webbsite</a><br>
+        <a id="offGW2" href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2 webbsite</a><br>
         <br>
         <table>
             <thead>
