--- a/index.html
+++ b/index.html
@@ -184,10 +184,12 @@
             </tbody>
         </table>
         <h4>Trailer for Guild Wars 2</h4>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rkPwxUu6kSI?si=c1IQfvGyUAs7PDrl"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="gw2-trailer">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/rkPwxUu6kSI?si=c1IQfvGyUAs7PDrl"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
 </body>
 
