format with html langue feature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Which MMO should you choose?</title>
 </head>
+
 <body>
     <header>
         <h1>You want to play an mmo and don't know which to choose?</h1>
@@ -30,18 +31,20 @@
             Think about what what is important to <span class="You">you</span> when choosing an mmo.
         </p>
         <ul>
-            <li id="pris" >Price</li>
-            <li id="genre" >Genre</li>
-            <li id="combat" >Combat</li>
+            <li id="pris">Price</li>
+            <li id="genre">Genre</li>
+            <li id="combat">Combat</li>
         </ul>
     </header>
     <section>
 
         <h3 id="finalfantasyxivid">Final Fantasy XIV</h3>
-        <p>This game has the best story from a mmo that I have played. The beginning  off the main story quest <span class="MSQ">(MSQ)</span> can
+        <p>This game has the best story from a mmo that I have played. The beginning off the main story quest <span
+                class="MSQ">(MSQ)</span> can
             be slow,
             but if you take the time to enjoy the story is worth it.</p>
-        <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV webbsite</a><br>
+        <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV
+            webbsite</a><br>
 
         <table>
             <thead>
@@ -94,7 +97,8 @@
             and live is the newest expansion. Unless you have friend that you want to play with in the live version,or
             are a returning player I
             would go to classic,where there is not 20 years of story</p>
-        <a id="offwow" href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of warcraft webbsite</a><br>
+        <a id="offwow" href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of
+            warcraft webbsite</a><br>
         <br>
         <table>
             <thead>
@@ -145,7 +149,8 @@
         <p>This game is casual friendly and has great value for the money.Have played this on and off for years, sense
             this game
             has no subs I find it easier to go back to when I haven't play in a while.</p>
-        <a id="offGW2" href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2 webbsite</a><br>
+        <a id="offGW2" href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2
+            webbsite</a><br>
         <br>
         <table>
             <thead>
