--- a/index.html
+++ b/index.html
@@ -43,46 +43,46 @@
                 class="MSQ">(MSQ)</span> can
             be slow,
             but if you take the time to enjoy the story is worth it.</p>
-        <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV
-            webbsite</a><br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col">How to pay</th>
-                    <th scope="col">Yes/No</th>
-                    <th scope="col">Comment</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">Subscription</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Buy to play</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free to play</th>
-                    <td>No</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free trial</th>
-                    <td>Yes</td>
-                    <td class="comment">You can play the free version upp til level 70</td>
-                </tr>
-                <tr>
-                    <th scope="row">Extra</th>
-                    <td>Yes </td>
-                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
-                </tr>
-            </tbody>
-        </table><br>
-
+        <div class="ff14-linkandtable">
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">How to pay</th>
+                        <th scope="col">Yes/No</th>
+                        <th scope="col">Comment</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Subscription</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Buy to play</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free to play</th>
+                        <td>No</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free trial</th>
+                        <td>Yes</td>
+                        <td class="comment">You can play the free version upp til level 70</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Extra</th>
+                        <td>Yes </td>
+                        <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    </tr>
+                </tbody>
+            </table><br>
+            <a id="offsidaff14" href="https://eu.finalfantasyxiv.com/" target="_blank">Go to official the final Fantasy XIV
+                webbsite</a>
+        </div>
         <h4>Trailer for Final Fantasy XIV A REALM REBORN</h4>
         <div class="ff14-trailer">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/h542YbZuwkQ?si=uBinGszyEWbY6Jde"
@@ -97,45 +97,47 @@
             and live is the newest expansion. Unless you have friend that you want to play with in the live version,or
             are a returning player I
             would go to classic,where there is not 20 years of story</p>
-        <a id="offwow" href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of
-            warcraft webbsite</a><br>
-        <br>
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col">How to pay</th>
-                    <th scope="col">Yes/No</th>
-                    <th scope="col">Comment</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">Subscription</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Buy to play</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free to play</th>
-                    <td>No</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free trial</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Extra</th>
-                    <td>Yes</td>
-                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
-                </tr>
-            </tbody>
-        </table>
+
+        <div class="wow-linkandtable">
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">How to pay</th>
+                        <th scope="col">Yes/No</th>
+                        <th scope="col">Comment</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Subscription</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Buy to play</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free to play</th>
+                        <td>No</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free trial</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Extra</th>
+                        <td>Yes</td>
+                        <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    </tr>
+                </tbody>
+            </table><br>
+            <a id="offwow" href="https://worldofwarcraft.blizzard.com/en-us/" target="_blank">Go to official the world of
+                warcraft webbsite</a>
+        </div>
         <h4>Trailer for World of Warcraft (original)</h4>
         <div class="wow-trailer">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vlVSJ0AvZe0?si=vvRj1xmXubki-7bn"
@@ -149,45 +151,48 @@
         <p>This game is casual friendly and has great value for the money.Have played this on and off for years, sense
             this game
             has no subs I find it easier to go back to when I haven't play in a while.</p>
-        <a id="offGW2" href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2
-            webbsite</a><br>
+
         <br>
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col">How to pay</th>
-                    <th scope="col">Yes/No</th>
-                    <th scope="col">Comment</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">Subscription</th>
-                    <td>No</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Buy to play</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free to play</th>
-                    <td>No</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Free trial</th>
-                    <td>Yes</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">Extra</th>
-                    <td>Yes</td>
-                    <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="gw2-linkandtable">
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">How to pay</th>
+                        <th scope="col">Yes/No</th>
+                        <th scope="col">Comment</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Subscription</th>
+                        <td>No</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Buy to play</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free to play</th>
+                        <td>No</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Free trial</th>
+                        <td>Yes</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Extra</th>
+                        <td>Yes</td>
+                        <td class="comment">Need to buy expansion pack. There is also an webbshop/cash shop</td>
+                    </tr>
+                </tbody>
+            </table>
+            <a id="offGW2" href="https://www.guildwars2.com/en/" target="_blank">Go to official the Guld Wars 2
+                webbsite</a>
+        </div>
         <h4>Trailer for Guild Wars 2</h4>
         <div class="gw2-trailer">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/rkPwxUu6kSI?si=c1IQfvGyUAs7PDrl"
